# cron-ui

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  PRIORITIES.md  README.md  app.py  collector.py  database.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  test-docker.sh
.github/workflows/: ci.yml
tests/: test_app.py  test_collector.py  test_database.py
ui/static/css/: app.css
ui/static/js/: app.js
ui/templates/: base.html  index.html  job_detail.html  jobs.html
